@@ -2,6 +2,14 @@
 Datatest Changelog
 ==================
 
+
+COMING SOON (0.9.3)
+-------------------
+
+* Added unwrap() method to Query class to unwrap single-item sequences
+  or sets.
+
+
 2018-08-08 (0.9.2)
 ------------------
 
